fix bad bug with jump

--- a/src/assets/style/main.scss
+++ b/src/assets/style/main.scss
@@ -57,27 +57,27 @@
 		box-shadow: 2px 2px 6px rgba($color: #000000, $alpha: 0.2);
 	}
 
-	&.active {
-		position: fixed;
-		height: 70vh;
-		width: 900px;
-		margin: 0 auto;
-		left: 0;
-		right: 0;
-		border: 1px solid #ccc;
-		box-shadow: 2px 2px 6px rgba($color: #000000, $alpha: 0.2);
-	}
+	// &.active {
+	// 	position: fixed;
+	// 	height: 70vh;
+	// 	width: 900px;
+	// 	margin: 0 auto;
+	// 	left: 0;
+	// 	right: 0;
+	// 	border: 1px solid #ccc;
+	// 	box-shadow: 2px 2px 6px rgba($color: #000000, $alpha: 0.2);
+	// }
 
-	&.inactive {
-		opacity: 0;
-		user-select: none;
-		display: none;
-	}
-	&.group {
-    background: var(--middle);
-    border-radius: var(--rad);
-    border: 2px solid var(--green);
-	}
+	// &.inactive {
+	// 	opacity: 0;
+	// 	user-select: none;
+	// 	display: none;
+	// }
+	// &.group {
+	//    background: var(--middle);
+	//    border-radius: var(--rad);
+	//    border: 2px solid var(--green);
+	// }
 
 	&.green {
 		background: #a8d7a8;
